--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   },
-  "homepage": "https://username.github.io"
+  "homepage": "https://alexpxcell.github.io"
 }
