--- a/deploy.yml
+++ b/deploy.yml
@@ -16,5 +16,5 @@ jobs:
         env:
           TOKEN: ${{ secrets.PROD_ACCESS_TOKEN }}
         run: |
-          git remote add production https://<TOKEN>@github.com/alexWandugu/alexWandugu.github.io.git
+          git remote add production https://${TOKEN}@github.com/alexWandugu/alexWandugu.github.io.git
           git push production main:production
