--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "deploy:prod": "npm run build && git tag -a $npm_config_tag -m \"Release $npm_config_tag\" && git push origin $npm_config_tag"
   },
   "dependencies": {
     "pinia": "^2.2.6",
