--- a/deploy.yml
+++ b/deploy.yml
@@ -1,20 +1,50 @@
-name: Deploy to Production
+name: Deploy to New Account Repository
 
 on:
   push:
-    tags:
-      - 'v*.*.*'  # Matches tags like v1.1, v1.2.3, etc.
+    branches:
+      - main  # Trigger the workflow when changes are pushed to the main branch
 
 jobs:
-  deploy:
+  deploy_to_main:
+    name: Push Changes to Main Branch in New Repository
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Push to Production Repo
+      - name: Push to Main Branch in New Repository
         env:
           TOKEN: ${{ secrets.PROD_ACCESS_TOKEN }}
         run: |
-          git remote add production https://${TOKEN}@github.com/alexWandugu/alexWandugu.github.io.git
-          git push production main:production
+          git remote add production https://${TOKEN}@github.com/<new-account>/<new-repo>.git
+          git push production main:main
+
+  deploy_to_gh_pages:
+    name: Deploy Dist Folder to gh-pages Branch
+    runs-on: ubuntu-latest
+    needs: deploy_to_main  # Ensures this job runs after deploy_to_main
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Project
+        run: npm run build
+
+      - name: Deploy Dist Folder to gh-pages
+        env:
+          TOKEN: ${{ secrets.PROD_ACCESS_TOKEN }}
+        run: |
+          git remote add production https://${TOKEN}@github.com/<new-account>/<new-repo>.git
+          git fetch production
+          git switch --orphan gh-pages
+          git rm -rf .
+          cp -r dist/* .
+          git add .
+          git commit -m "Deploy to gh-pages"
+          git push --force production gh-pages
