--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "deploy:prod": "npm run build && git tag -a $npm_config_tag -m \"Release $npm_config_tag\" && git push origin $npm_config_tag"
   },
   "dependencies": {
+    "lucide": "^0.475.0",
+    "lucide-vue-next": "^0.475.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
